--- a/SimpleForces.vcxproj.filters
+++ b/SimpleForces.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClInclude Include="globals.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="object.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
