Added kind of working gravity simulation

--- a/SimpleForces.vcxproj
+++ b/SimpleForces.vcxproj
@@ -145,6 +145,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="circle.cpp" />
+    <ClCompile Include="gravity_simulation.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="object.cpp" />
     <ClCompile Include="simulation.cpp" />
@@ -152,6 +153,7 @@
   <ItemGroup>
     <ClInclude Include="circle.h" />
     <ClInclude Include="globals.h" />
+    <ClInclude Include="gravity_simulation.h" />
     <ClInclude Include="object.h" />
     <ClInclude Include="simulation.h" />
   </ItemGroup>
