--- a/SimpleForces.vcxproj.filters
+++ b/SimpleForces.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="circle.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="gravity_simulation.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="simulation.h">
@@ -39,6 +42,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="circle.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="gravity_simulation.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
