Added gravity simulation without collisions

--- a/SimpleForces.vcxproj
+++ b/SimpleForces.vcxproj
@@ -146,6 +146,7 @@
   <ItemGroup>
     <ClCompile Include="circle.cpp" />
     <ClCompile Include="gravity_simulation.cpp" />
+    <ClCompile Include="input.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="object.cpp" />
     <ClCompile Include="simulation.cpp" />
@@ -154,6 +155,7 @@
     <ClInclude Include="circle.h" />
     <ClInclude Include="globals.h" />
     <ClInclude Include="gravity_simulation.h" />
+    <ClInclude Include="input.h" />
     <ClInclude Include="object.h" />
     <ClInclude Include="simulation.h" />
   </ItemGroup>
